@@ -14,7 +14,7 @@ Warning
     reflect code quality or stability.
 
 Copying
-    Copyright (C) 2009-2010 by H.Merijn Brand
+    Copyright (C) 2009-2011 by H.Merijn Brand
     Copyright (C) 2004-2009 by Jeff Zucker
     Copyright (C) 1998-2004 by Jochen Wiedmann
  
