@@ -6,18 +6,7 @@
 #
 #	H.Merijn Brand <h.m.brand@xs4all.nl>
 #
-#   The original author is Jochen Wiedmann.
-#   Then maintained by Jeff Zucker
-#
-#   Copyright (C) 2010 by H.Merijn Brand
-#   Copyright (C) 2004 by Jeff Zucker
-#   Copyright (C) 1998 by Jochen Wiedmann
-#
-#   All rights reserved.
-#
-#   You may distribute this module under the terms of either the GNU
-#   General Public License or the Artistic License, as specified in
-#   the Perl README file.
+#   See for full acknowledgements the last two pod sections in this file
 
 require 5.005003;
 use strict;
@@ -1233,7 +1222,7 @@ Previous maintainer was Jeff Zucker
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2009-2010 by H.Merijn Brand
+Copyright (C) 2009-2011 by H.Merijn Brand
 Copyright (C) 2004-2009 by Jeff Zucker
 Copyright (C) 1998-2004 by Jochen Wiedmann
 
